--- a/src/Properties/Log4j.properties
+++ b/src/Properties/Log4j.properties
@@ -1,10 +1,31 @@
-# Define the root logger with appender file
-log4j.rootLogger = DEBUG, FILE
+# Define the root logger with the main appender and console output
+log4j.rootLogger = DEBUG, FILE, CONSOLE
 
-# Define the file appender
+# Define the main file appender
 log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=c:\\Logs\\LogFile.txt
 
-# Define the layout for file appender
+# Define the layout for the main file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# Define the updated pattern for log formatting with a line of dashes after each log
+log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}.%M:%L - %m%n---------------------------%n%n
+
+# Define the AOP file appender
+log4j.appender.AOPFILE=org.apache.log4j.FileAppender
+log4j.appender.AOPFILE.File=c:\\Logs\\AOPLogFile.txt
+
+# Define the layout for the AOP file appender
+log4j.appender.AOPFILE.layout=org.apache.log4j.PatternLayout
+
+# Define the pattern for AOP log formatting
+log4j.appender.AOPFILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}.%M:%L - %m%n---------------------------%n%n
+
+# Configure a logger for AOP, specifying the AOP file appender
+log4j.logger.com.example.springProject.Aop=DEBUG, AOPFILE
+log4j.additivity.com.example.springProject.Aop = false  # Ensure the case matches
+
+# Ensure that log messages from AOP are also logged to the console (optional)
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}.%M:%L - %m%n
