--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.show-sql=true
 ##spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.format_sql=true
-
+#
+#spring.security.user.name = shri
+#spring.security.user.password = 123456
