--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,17 +19,41 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root_password
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
+    
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+
+    - name: Wait for MySQL to be ready
+      run: |
+        for i in {30..0}; do
+          if echo 'SELECT 1' | mysql -h127.0.0.1 -P3306 -uroot -proot_password; then
+            break
+          fi
+          echo 'MySQL still not ready, waiting...'
+          sleep 1
+        done
+
     - name: Build with Maven
       run: mvn clean install
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
