--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,21 +16,24 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     services:
       mysql:
         image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: root_password
-          MYSQL_DATABASE: test_db
-          MYSQL_USER: test_user
-          MYSQL_PASSWORD: test_password
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
-    
+        options: > 
+          --health-cmd="mysqladmin ping --silent" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=3
+        env:
+          MYSQL_ROOT_PASSWORD: rootpassword  # This can remain as is
+          MYSQL_DATABASE: insuranceSpring      # Make sure this matches the database in application.properties
+          MYSQL_USER: root                     # Change to 'root' if that's what you're using in application.properties
+          MYSQL_PASSWORD: Tshrihari@1363 
+
     steps:
     - uses: actions/checkout@v4
 
@@ -41,19 +44,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Wait for MySQL to be ready
-      run: |
-        for i in {30..0}; do
-          if echo 'SELECT 1' | mysql -h127.0.0.1 -P3306 -uroot -proot_password; then
-            break
-          fi
-          echo 'MySQL still not ready, waiting...'
-          sleep 1
-        done
-
     - name: Build with Maven
       run: mvn clean install
 
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Run tests with Maven
+      run: mvn test
+
 
