--- a/src/Properties/Log4j.properties
+++ b/src/Properties/Log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.FILE.File=c:\\Logs\\LogFile.txt
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 
 # Define the updated pattern for log formatting with a line of dashes after each log
-log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}.%M:%L - %m%n---------------------------%n%n
+log4j.appender.FILE.layout.conversionPatter-----------------n=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}.%M:%L - %m%n----------%n%n
 
 # Define the AOP file appender
 log4j.appender.AOPFILE=org.apache.log4j.FileAppender
